# procedural-implicit-terrain-raymarching

./: .gitignore  CMakeLists.txt  README.md  TerrainApp.rc
Configs/: alien.json  atmospheric_effects.json  camera_top_down.json  circle.json  clouds_1d.json  clouds_sun.json  default.json  default_backup.json  eval_precision_test.json  imgui.ini  noise1d.json  noise2d.json  perf.json  planet.json  sky_evening.json  snow01.json  success_criteria.json  tall_moutains.json  terrain.json  terrain_closer.json  terrain_closer_domain_distortion.json  terrain_closer_single_heightmap.json  terrain_closer_single_tree.json  terrain_closer_trees.json  terrain_shadows.json  tree_shadows.json
Configs/Correctness/: E1-A.json  E2-B.json  E3-C.json  E4-K.json  imgui.ini
Configs/Layouts/: layout.json
Configs/Sky Quality/: S1-F.json  S1-T.json  S1H-F.json  S1H-T.json  S2-F.json  S2-T.json  S2H-F.json  S2H-T.json  S3-F.json  S3-T.json  S3H-F.json  S3H-T.json  S4-F.json  S4-T.json  S4H-F.json  S4H-T.json  S5-F.json  S5-T .json  S5H-F.json  S5H-T .json  imgui.ini
Configs/Terrain Heightmap Quality/: 1-Camera-High.json  1-Camera-Low.json  1-Camera-Mid.json  1-Camera-Very-High.json  1-FF.json  1-FT.json  1-TF.json  1-TT.json  2-FT.json  2-TT.json  3-FT.json  3-TT.json  4-FT.json  4-TT.json  5-FT.json  5-TT.json  imgui.ini
GLSL_Thems_Syntax/: CustomPalenightHighContrastGLSL.json  custom.glsl.tmLanguage .json
Images/Eval/: perf.csv
Images/Eval/Raymarching-A/: A-perf.csv
Images/Eval/Raymarching-B/: B-perf.csv
Images/Eval/Raymarching-C/: C-perf.csv
Images/Eval/Raymarching-C2/: C-perf.csv
Images/Eval/Raymarching-K/: K-perf.csv
Libraries/include/glad/: glad.h
Source/: CallbackManager.cpp  CallbackManager.h  Camera.h  CameraController.cpp  CameraController.h  CameraPanel.cpp  CameraPanel.h  ColorProperty.h  Constants.h  DebugPanel.cpp  DebugPanel.h  EBO.cpp  EBO.h  FBO.cpp  FBO.h  FPSCounter.cpp  FPSCounter.h  Init.cpp  Init.h  JsonUtils.h  Main.cpp  Property.h  RenderTarget.h  ShaderClass.cpp  ShaderClass.h  SliderProperty.h  TerrainPanel.cpp  UIApp.cpp  UIApp.h  UIPanel.cpp  UIPanel.h  UIUtils.h  Utils.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  Window.cpp  Window.h
Source/Camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h
Source/Others/: default.frag  glad.c  imgui.ini  stb.cpp
Source/Shaders/: Atmosphere.frag  Clouds.frag  Constants.frag  Debug.frag  Encoding.frag  Evaluation.ipynb  Fbm.frag  Hash.frag  HeightDifferenceError.frag  HeightMap.frag  IntersectionDistanceError.frag  Main.frag  Motion.frag  Part_II_Project_Graphs.ipynb  Planet.frag  PlanetShading.frag  Profiling.frag  ProfilingHeader.frag  Raymarching.frag  Rocks.frag  Shading.frag  Smoothstep.frag  SphericalAtmosphere.frag  Sun.frag  Terrain.frag  TerrainMaterial.frag  Tree.frag  TwoDSky.frag  ValueNoise.frag  Water.frag  default.frag  default.vert  minimum.frag  minimum.vert
Source/Shaders/Evaluation/: Image.ipynb  Part_II_Project_Graphs.ipynb  Performance.ipynb  Video.ipynb  list_utils.py  moviepy-config.txt
Source/Shaders/Evaluation/Correctness/: Correctness.ipynb  Errors.py  EvaluationPlayground.ipynb
Source/Shaders/Evaluation/Performance/: Performance.ipynb  ShaderLine.ipynb
Source/Shaders/Evaluation/Video_Oders/: 1-ORDER.txt  2-ORDER.txt  3-ORDER.txt  4-ORDER.txt  5-ORDER.txt
Source/Shaders/Others/: Minimum.frag  Minimum.vert
Source/UI/: CameraPanel.cpp  CameraPanel.h  CloudPanel.cpp  CloudPanel.h  ColorProperty.h  DebugPanel.cpp  DebugPanel.h  DomainRepPanel.cpp  DomainRepPanel.h  Float3Property.h  LightPanel.cpp  LightPanel.h  MenuBarPanel.cpp  MenuBarPanel.h  MotionPanel.h  PerformancePanel.cpp  PerformancePanel.h  PlanetPanel.h  ProfilingPanel.h  Property.h  RaymarchPanel.cpp  RaymarchPanel.h  SkyPanel.cpp  SkyPanel.h  SliderProperty.h  TabsPanel.cpp  TabsPanel.h  TerrainPanel.cpp  TerrainPanel.h  TwoDSkyPanel.h  UIApp.cpp  UIApp.h  UIPanel.cpp  UIPanel.h  UIUtils.h  WaterPanel.h
Source/UI/Properties/: BoolProperty.h  ColorProperty.h  Float3Property.h  GroupProperty.h  LabelProperty.h  Property.h  RangeSliderProperty.h  SingleSelectProperty.h  SliderProperty.h  VecProperty.h  VecSliderProperty.h
